== 0.8.7

* Enhancements
  * Number of total Baseline Visits reduced to 150, down from 180
  * Mailing index now automatically filters to "potentially eligible" patients
  * Contact list can now be generated from patients who have had visits

* Bug Fix
  * Switching Administration Type should no longer cause an IE7 JavaScript error

== 0.8.6 (January 8, 2013)

* Security Fix
  * Updated Rails to 3.2.11

== 0.8.5 (January 4, 2013)

* Enhancements
  * Updated to Contour 1.1.2, using Contour as pagination theme

* Bug Fix
  * Evaluations with AHI now accept two digits after the decimal

== 0.8.4 (January 3, 2013)

* Security Fix
  * Updated Rails to 3.2.10

* Enhancements
  * Use new Task Tracker 0.24.0 API when creating new groups

* Bug Fix
  * User activation emails are no longer sent out when a user's status is changed from pending to inactive

== 0.8.3 (November 27, 2012)

* Enhancements
  * Gem updates including Rails 3.2.9 and Ruby 1.9.3-p327
  * Patient search now uses Select2 JavaScript plugin
  * Updated to Contour 1.1.1 and replaced inline JavaScript with Unobtrusive JavaScript

== 0.8.2 (August 13, 2012)

* Enhancements
  * Updated to Rails 3.2.8

== 0.8.1 (July 31, 2012)

* Enhancements
  * Using unassigned => 1 for JSON request for stickies from Task Tracker
  * Simplified labels for doctor type on bulk mailing import page
  * Updated to Rails 3.2.7
    * Removed deprecated use of update_attribute for Rails 4.0 compatibility

* Testing
  * Use ActionDispatch for Integration tests instead of ActionController

== 0.8.0 (July 17, 2012)

* Enhancements
  * Mailing Changes:
    * Imports using Subject Codes instead of MRNs available
    * Imports now require the doctor type to be specified
  * Email Changes:
    * Default application name is now added to the from: field for emails
    * Email subjects no longer include the application name
  * Patients can now be filtered using comma-separated subject codes