@@ -1,5 +1,5 @@
 class Patient < ActiveRecord::Base
-  attr_accessible :mrn, :subject_code, :name_code, :first_name, :last_name, :phone_home, :phone_day, :phone_alt, :sex, :age, :address1, :city, :state, :zip, :priority, :priority_message, :user_id
+  attr_accessible :mrn, :subject_code, :name_code, :first_name, :last_name, :phone_home, :phone_day, :phone_alt, :sex, :age, :address1, :city, :state, :zip, :priority, :priority_message, :user_id, :email
 
   EDITABLES = ['phone_home', 'city', 'state']
   PRIORITY_MESSAGES = [["Latest Call is ...", "Latest Call is %"], ["Latest Call is ... and no Embletta Administered", "Latest Call is % and no Embletta Administered"], ["Baseline Visit and no 2-month Call after 68 days", "Baseline Visit and no 2-month Call after 68 days"]]
@@ -95,6 +95,10 @@ class Patient < ActiveRecord::Base
 
   def phi_zip(current_user)
     current_user.access_phi? ? self.zip : self.scrubbed
+  end
+
+  def phi_email(current_user)
+    current_user.access_phi? ? self.email : self.scrubbed
   end
 
   def editable_by?(current_user)
