@@ -51,6 +51,9 @@
 
       <dt>Alt Phone</dt>
       <dd><%= pretty_phone @patient.phi_phone_alt(current_user) %></dd>
+
+      <dt>Email</dt>
+      <dd><%= pretty_phone @patient.phi_email(current_user) %></dd>
     </dl>
   </div>
   <div class="span3">
