@@ -1,0 +1,5 @@
+class AddEmailToPatients < ActiveRecord::Migration
+  def change
+    add_column :patients, :email, :string
+  end
+end
