@@ -4,6 +4,8 @@
   * Number of total Baseline Visits reduced to 150, down from 180
   * Mailing index now automatically filters to "potentially eligible" patients
   * Contact list can now be generated from patients who have had visits
+  * Contact information now includes an email
+  * Acceptable Use Policy added
 
 * Bug Fix
   * Switching Administration Type should no longer cause an IE7 JavaScript error
